BoilerPlateOrg/force-app/logging/default/objects/Logging_Settings__c/Logging_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to control logging levels
    Documentation on usage can be found here:
        https://makepositive.atlassian.net/wiki/spaces/DEV/pages/1195180104/Logging
    </description>
    <label>Logging Settings</label>
</CustomObject>