BoilerPlateOrg/force-app/logging/default/objects/Logging_Settings__c/fields/Enable_Http_Request_Failure_Logging__c.field-meta.xml
<fields>
    <fullName>Enable_Http_Request_Failure_Logging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable logging of Failed back-end HTTP Requests? - Is used by the http-logging module, if imported.</description>
    <inlineHelpText>Enable logging of Failed back-end HTTP Requests? - Is used by the http-logging module, if imported.</inlineHelpText>
    <label>Enable logging of Failed HTTP Requests?</label>
    <type>Checkbox</type>
</fields>