BoilerPlateOrg/force-app/logging/default/objects/Logging_Settings__c/fields/Enable_System_Log_Error_Messages__c.field-meta.xml
<fields>
    <fullName>Enable_System_Log_Error_Messages__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable logging of error level messages?</description>
    <inlineHelpText>Enable logging of error level messages?</inlineHelpText>
    <label>Enable System Log Error Messages?</label>
    <type>Checkbox</type>
</fields>