BoilerPlateOrg/force-app/logging/default/objects/Logging_Settings__c/fields/Enable_System_Log_Info_Messages__c.field-meta.xml
<fields>
    <fullName>Enable_System_Log_Info_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable logging of info level messages?</description>
    <inlineHelpText>Enable logging of info level messages?</inlineHelpText>
    <label>Enable System Log Info Messages?</label>
    <type>Checkbox</type>
</fields>